kubernetes/networkPolicy/workshop/tests/allow-numbers.yaml
# This policy solves item 1
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-numbers
  namespace: colors
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: numbers
