kubernetes/networkPolicy/workshop/tests/blue-to-green.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: blue-to-green
  namespace: colors
spec:
  podSelector:
    matchLabels:
      color: green
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          color: blue
