kubernetes/networkPolicy/workshop/tests/default-deny-numbers.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: numbers
spec:
  podSelector: {}
  policyTypes:
  - Ingress
